agregando ../ a mi link de css

--- a/html/agregar-producto.html
+++ b/html/agregar-producto.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title> E-commerce</title>
-    <link rel="icon" href="/imagenes/e-commerce.png" type="image/x-icon" />
+    <link rel="icon" href="../imagenes/e-commerce.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/css/css-agregarProductos/cabecera.css" />
-    <link rel="stylesheet" href="/css/css-agregarProductos/agregar.css" />
-    <link rel="stylesheet" href="/css/css-agregarProductos/contacto.css" />
-    <link rel="stylesheet" href="/css/css-agregarProductos/footer.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../css/css-agregarProductos/cabecera.css" />
+    <link rel="stylesheet" href="../css/css-agregarProductos/agregar.css" />
+    <link rel="stylesheet" href="../css/css-agregarProductos/contacto.css" />
+    <link rel="stylesheet" href="../css/css-agregarProductos/footer.css" />
 </head>
 <body>
      <div class="todo-4">
           <header class="cabecera">
                <div class="cabecera__div">
-                    <a href="/index.html">
-                         <img class="cabecera__logo" src="/imagenes/Logo.png">
+                    <a href="../index.html">
+                         <img class="cabecera__logo" src="../imagenes/Logo.png">
                      </a>
                     <input class="cabecera__busqueda" type="texto" placeholder="¿Que desea buscar?">
                     <button class="cabecera__lupa" ></button>
-                    <a href="/index.html" class="cabecera__boton">Menú Administrador</a>
+                    <a href="../index.html" class="cabecera__boton">Menú Administrador</a>
                </div>
           </header>
 
@@ -58,8 +58,8 @@
                <section class="cuerpo__contacto" >
                     <div class="informaciones">
                          <div class="contacto__logo">
-                              <a href="/index.html">
-                                   <img class="imagen-logo__contacto" src="/imagenes/Logo.png" alt="logo">
+                              <a href="../index.html">
+                                   <img class="imagen-logo__contacto" src="../imagenes/Logo.png" alt="logo">
                               </a>
                          </div>
                          <div class="contactos__parrafos">
@@ -79,7 +79,7 @@
                               <span class="input-message-error">Este campo no es valido</span>
                          </div>
                          <div class="contacto__2">
-                              <textarea class="contacto__Escribenos" name="" id="" cols="30" rows="10" placeholder="Escribe tu mensaje"></textarea> 
+                              <textarea class="contacto__Escribenos" name="" id="" cols="30" rows="10" placeholder="Escribe tu mensaje" required></textarea> 
                          </div>
                          <div>
                               <button type="submit" class="enviar__mensaje">Enviar mensaje</button>
