--- a/html/home-login.html
+++ b/html/home-login.html
@@ -5,21 +5,21 @@
      <meta name="viewport" content="width=device-width initial-scale=1.0">
      <meta http-equiv='X-UA-Compatible' content='IE=edge'>
      <title> E-commerce</title>
-     <link rel="icon" href="/imagenes/e-commerce.png" type="image/x-icon" />
+     <link rel="icon" href="../imagenes/e-commerce.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/css/css-login/cabecera.css" />
-    <link rel="stylesheet" href="/css/css-login/registro.css" />
-    <link rel="stylesheet" href="/css/css-login/contacto.css" />
-    <link rel="stylesheet" href="/css/css-login/footer.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../css/css-login/cabecera.css" />
+    <link rel="stylesheet" href="../css/css-login/registro.css" />
+    <link rel="stylesheet" href="../css/css-login/contacto.css" />
+    <link rel="stylesheet" href="../css/css-login/footer.css" />
 </head>
 
 <body>
     <div class="todo-2">
         <header class="cabecera">
             <div class="cabecera__div">
-                <a href="/index.html">
-                    <img class="cabecera__logo" src="/imagenes/Logo.png">
+                <a href="../index.html">
+                    <img class="cabecera__logo" src="../imagenes/Logo.png">
                 </a>
                 <input class="cabecera__busqueda" type="texto" placeholder="¿Que desea buscar?">
                 <button class="cabecera__lupa" ></button>
@@ -38,14 +38,14 @@
                         <input type="password" class="registro__contraseña" id="contraseña" name="contraseña"  placeholder="Escriba su contraseña" required pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[ !@#\$%^&*_=+\-]).{6,12}$"  data-tipo="contraseña">
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
-                    <button  class="registros__enviar" href="./todo-productos.html">Entrar</button>
+                    <button  class="registros__enviar" href="../todo-productos.html">Entrar</button>
                 </form>
             </section>
 
             <section class="cuerpo__contacto" >
                 <div class="informaciones">
                      <div class="contacto__logo">
-                          <img class="imagen-logo__contacto" src="/imagenes/Logo.png" alt="logo" >
+                          <img class="imagen-logo__contacto" src="../imagenes/Logo.png" alt="logo" >
                      </div>
                      <div class="contactos__parrafos">
                           <p  class="parrafo__contacto">Quienes somos</p>
@@ -64,7 +64,7 @@
                         <span class="input-message-error">Este campo no es valido</span>
                      </div>
                      <div class="contacto__2">
-                        <textarea class="contacto__Escribenos" name="" id="" cols="30" rows="10" placeholder="Escribe tu mensaje"></textarea> 
+                        <textarea class="contacto__Escribenos" name="" id="" cols="30" rows="10" placeholder="Escribe tu mensaje" required></textarea> 
                      </div>
                      <div>
                         <button type="submit" class="enviar__mensaje">Enviar mensaje</button>
