--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                    <a class="info__producto" href="">Ver producto</a>
                               </div>
                               <div class="producto">
-                                   <img class="imagen__producto" src="imagenes/skill(8).png" alt="">
+                                   <img class="imagen__producto" src="imagenes/Skill(8).png" alt="">
                                    <p class="nombre__producto">Nintendo</p>
                                    <p class="precio__producto">$ 90,00</p>
                                    <a class="info__producto" href="">Ver producto</a>
