--- a/html/home-login.html
+++ b/html/home-login.html
@@ -79,6 +79,6 @@
             </section>
         </main>
     </div>
-    <script type="module" src="/js/app.js"></script>
+    <script type="module" src="../js/app.js"></script>
 </body>
 </html>
