--- a/html/todo-productos.html
+++ b/html/todo-productos.html
@@ -84,7 +84,7 @@
                         <p class="número__producto"># 008</p>
                     </div>
                     <div class="producto">
-                        <img class="imagen__producto" src="../imagenes/skill(8).png" alt="imagen de producto">
+                        <img class="imagen__producto" src="../imagenes/Skill(8).png" alt="imagen de producto">
                         <p class="nombre__producto">Nintendo</p>
                         <p class="precio__producto">$ 90,00</p>
                         <p class="número__producto"># 009</p>
@@ -182,6 +182,6 @@
                  <p class="footer__parrafo__2">2023</p>
             </div>
         </section>
-        <script type="module" src="/js/app.js"></script>
+        <script type="module" src="../js/app.js"></script>
 </body>
 </html>
